# cm-trace

./: .gitignore  CMakeLists.txt  Pipfile  README.md  build-all-targets  build-python  build-release  cmtrace.py  elf.py  hatch.toml  lint  pyproject.toml  timestamp
cmtrace/: __init__.py  breakdown.py  capture.py  dump.py  elf.py
libcmtrace/: CMakeLists.txt
libcmtrace/include/: cmtrace.h
libcmtrace/source/: cmtrace.c  cmtrace_asm.S  dwt.c  test_targets.c
on/: cortex-m0  cortex-m23  cortex-m3  cortex-m33  cortex-m35p  cortex-m4  cortex-m52  cortex-m55  cortex-m7  cortex-m85
